<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".profile.ProfileCreatorActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/layProfileName"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileNameField"
            android:id="@+id/txtNewProfileNameDescription" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtProfileNameHint"
            android:id="@+id/txtNewProfileNameField" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:weightSum="1">

        <TextView
            android:text="@string/txtProfileThreshLowDescription"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProfileTreshLowDescription"
            android:layout_weight="0.01" />

        <Button
            android:text="-"
            android:layout_height="wrap_content"
            android:id="@+id/btnNewProfileDecreaseTreshLow"
            android:layout_width="63dp" />

        <TextView
            android:text="20°C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProfileThreshlow"
            android:layout_weight="0.20" />

        <Button
            android:text="+"
            android:layout_width="70dp"
            android:layout_height="46dp"
            android:id="@+id/btnNewProfileIncreaseTreshLow" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:id="@+id/Brightness">

        <TextView
            android:text="@string/txtProfileThreshHighDescription"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProfileThresHighDescription" />

        <Button
            android:text="-"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnNewProfileDecreaseTreshHigh" />

        <TextView
            android:text="25°C"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProfileThreshHigh" />

        <Button
            android:text="+"
            android:layout_width="70dp"
            android:layout_height="46dp"
            android:id="@+id/btnNewProfileIncreaseTreshHigh" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/txtProfileBrightnessDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView"
            android:layout_weight="0.13" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/skbNewProfileBrightnessSeekBar"
            android:layout_weight="0.59"
            android:max="2"
            android:progress="1" />

        <TextView
            android:text="@string/txtBrightnessValueDim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProfileBrightnessField"
            android:layout_weight="0.29"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:text="@string/txtNewProfileColorDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewProfilColorDescription"
            android:layout_weight="0.41" />

        <ListView
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:id="@+id/list_color"
            android:scrollbars="vertical" />

        <Button
            android:text="+"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnNewProfilAddColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layProfileButton"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/btnSaveProfile"
            android:text="@string/txtSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.09" />

        <Button
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/btnCancelEditProfile"
            android:text="@string/txtCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
